# VS_Testing

./: .gitignore  CMakeLists.txt  README.MD
CMakeGTests/: CMakeLists.txt  MatrixVector_Test.cpp
Tests/: Tests.vcxproj  test.cpp
Tests/x64/Debug/: Tests.exe.recipe  Tests.vcxproj.FileListAbsolute.txt
Tests/x64/Debug/Tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Tests.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tested_headers/: CMakeLists.txt  Vector2.cpp  Vector2.h
